Fixed careers page and footer alignment issues

--- a/careers.css
+++ b/careers.css
@@ -21,9 +21,10 @@ body {
         
         p {
             font-size: 22px;
-            width: 80%;
-            text-align: left;
-            padding-left: 10%;
+            width: auto;
+            text-align: justify;
+            padding-left: 13%;
+            padding-right: 13%;
         }
         
         .open_positions {
